bk_ida/gccida/g0/record_last_reg_set_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_last_reg_set_info/src/gcse.c:2831:9: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
info = &reg_avail_info_0[regno]; 
        ^~~~~~~~~~~~~~~~
        reg_avail_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_last_reg_set_info/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_last_reg_set_info/src/gcse.c:2832:22: error: use of undeclared identifier 'uid_cuid_1'
cuid = *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint); 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_last_reg_set_info/src/obj/gcse.o] Error 1
